# mephisto

./: .gitignore  Cargo.toml  README.md  build.rs
resources/examples/: adsr.mephisto  ar.mephisto  drum.mephisto  echo.mephisto  freeverb.mephisto  gate-sequencer.mephisto  karplus.mephisto  lib.mephisto  old.mephisto  reverb.mephisto  sine.mephisto  synth.mephisto  synth2.mephisto  valid.mephisto
resources/the-instrument/: README.md  index.html  package-lock.json  package.json  vite.config.ts
resources/the-instrument/public/: processor.js  processor.wat
resources/the-instrument/src/: App.tsx  audio-context.ts  index.css  index.scss
resources/the-instrument/src/audioengine/: adsr.mephisto  ar.mephisto  arretrig.mephisto  attenuator.mephisto  compressor.mephisto  distortion.mephisto  drum.mephisto  echo.mephisto  freeverb.mephisto  freq.mephisto  fuzz.mephisto  gate-sequencer.mephisto  (+14 more)
resources/wasm-playground/: test-processor.wat  test.rs  test.wasm  test.wat  test2.wat
resources/wasm-playground/processor/: test.js
resources/web-playground/: echo.js  index.html  minica-key.pem  minica.pem  processor.js  ringbuffer.js
resources/web-playground/localhost/: cert.pem  key.pem
src/: codegen.rs  ir.rs  lexer.rs  lib.rs  module_data.rs  module_loader.rs  parser.rs  semantic.rs  symbol_table.rs
src/codegen/: codegen_js.rs  codegen_wat.rs  context.rs  js.rs
src/codegen/templates/: js-basic.hbs  js.hbs  wat.hbs
src/examples/: full.mpha  minimal.mpha
src/lexer/: mod.rs  token.rs  token_type.rs  tokenizers.rs
src/parser/: ast.rs
tests/: lexer_tests.rs
(+56 files in other folders)
