[package]
name = "mephisto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
indexmap = "2.0.0"
regex = "1.9.3"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.105"

[build-dependencies]
copy_to_output = "2.1.0"
