[package]
name = "mephisto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
handlebars = "4.3.7"
indexmap = "2.0.0"
regex = "1.9.3"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.105"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
copy_to_output = "2.1.0"

[[bin]]
name = "mephisto"
path = "src/bin/main.rs"

[profile.release]
lto = true
opt-level = 3
